--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
         "HOST": "riccos.mooo.com",
         "USERNAME": "pi",
         "PASSWORD": "C0st4nz1"
+        "CLIENT_ID": "pico-002"
     }
 }    
