--- a/config.json
+++ b/config.json
@@ -6,9 +6,15 @@
     "MQTT": {
         "HOST": "riccos.mooo.com",
         "USERNAME": "pi",
-        "PASSWORD": "C0st4nz1",
-        "CLIENT_ID": "pico-002",
-        "TOPIC_TEMP01": "casaterni/sala/temperatura/sens01",
-        "TOPIC_HUM01": "casaterni/sala/umidita/sens01"
+        "PASSWORD": "C0st4nz1"
+    },
+    "TOPIC": {
+        "TYPE": "sensori",
+        "AREA": "terni",
+        "ZONE": "sala"
+    },
+    "DATA": {
+        "MEAS01": "temperatura",
+        "MEAS02": "umidita"
     }
 }    
